# hplearn

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_add_operation  benchmark_add_operation.cpp  benchmark_linear_regression.cpp  benchmark_liner_regression  benchmark_multiple_operation  benchmark_multiple_operation.cpp
hplearn/: BUILD  CMakeLists.txt  graph.cpp  main.cpp  op.h  optimizer.cpp
src/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  op.cpp  op.h  optimizer.cpp  optimizer.h  session.cpp  session.h
